[gd_scene load_steps=7 format=3 uid="uid://8s723r1blid4"]

[ext_resource type="Script" path="res://game1.gd" id="1_milnu"]
[ext_resource type="PackedScene" uid="uid://dotkhcwddn7jj" path="res://HackyGame2/mob.tscn" id="2_okqdh"]
[ext_resource type="PackedScene" uid="uid://bcidujtxt47mp" path="res://HackyGame2/player.tscn" id="3_t0mg0"]
[ext_resource type="AudioStream" uid="uid://ba1a4gmr3rl8b" path="res://HackyGame2/moosic/more intense.mp3" id="4_12ab6"]
[ext_resource type="Script" path="res://HackyGame2/UI.gd" id="5_2sc0p"]

[sub_resource type="Curve2D" id="Curve2D_20n5b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -4, -5, 0, 0, 0, 0, 1156, -1, 0, 0, 0, 0, 1154, 719, 0, 0, 0, 0, 0, 716, 0, 0, 0, 0, 1, 716, 0, 0, 0, 0, -4, -5)
}
point_count = 6

[node name="game1" type="Node"]
script = ExtResource("1_milnu")
mob_scene = ExtResource("2_okqdh")

[node name="Player" parent="." instance=ExtResource("3_t0mg0")]
position = Vector2(64, 92)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(578, 360)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_20n5b")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-4, -5)
rotation = 0.00344826

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_12ab6")
autoplay = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_2sc0p")

[node name="Start" type="Button" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -148.0
offset_right = 200.0
offset_bottom = -48.0
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="Menu5" type="Button" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -148.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Menu"

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 91.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -578.0
offset_top = -273.0
offset_right = 578.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Avoid the X!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="UI"]
wait_time = 2.0
one_shot = true

[connection signal="start_game" from="." to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="UI" to="." method="new_game"]
[connection signal="pressed" from="UI/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/Menu5" to="." method="_on_menu_pressed"]
[connection signal="timeout" from="UI/MessageTimer" to="." method="_on_message_timer_timeout"]
